[build-system]
requires = [
    "poetry-core>=1.0.0",
    "Cython>=0.29",
    "numpy >=2.0.0",
    "setuptools"
]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "zigzag-reload"
version = "0.4.0"
readme = "README.md"
homepage = "https://github.com/zillionare/ZigZag"
repository = "https://github.com/zillionare/ZigZag"
description = "Package for finding peaks and valleys of time series."
authors = ["generativist <jbn@abreka.com>"]
license = "BSD-3-Clause"
packages = [{ include = "zigzag" }]
include = [
    { path = "zigzag/**/*.so", format = "wheel" },
    { path = "zigzag/**/*.pyx" },
    { path = "zigzag/**/*.pyd" },
    "CHANGES.txt"
]


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
Cython = ">=0.29"
numpy = "^2.0.0"

[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pandas = ">=2.2.2"
setuptools = "^75.8.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
